# Content-Creator-App

./: .env.example  .gitattributes  .gitignore  502_ERROR_FIX.md  API_URL_FIX.md  APPLICATION_RESTART_DEBUG.md  APPLICATION_SHUTDOWN_DEBUG.md  ARCHITECTURE.md  AUTHENTICATION_SETUP.md  BLOG_CONTENT_OPTIMIZATION_RECOMMENDATIONS.md  CHECKOUT_ERROR_FIX.md  DATABASE_CONNECTION_FIX.md  DATABASE_CONNECTION_VERIFICATION.md  DATABASE_MIGRATIONS.md  DATABASE_POOL_FIX.md  DEBUG_STARTUP.md  DEBUG_STREAMING.md  DOCKER_FILES_SUMMARY.md  DOCKER_SETUP.md  Dockerfile  Dockerfile.api  Dockerfile.web  FIX_ENV_FILE.md  FRONTEND_502_FIX.md  FRONTEND_502_FIX_FINAL.md  FRONTEND_BACKEND_CONNECTION.md  FRONTEND_DEPLOYMENT_FIX.md  FRONTEND_FIX_COMPLETE.md  FRONTEND_RAILWAY_DEPLOYMENT.md  HEALTH_CHECK_FIX.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_VERIFICATION.md  IMPROVEMENT_PLAN.md  MERGE_VERIFICATION_REPORT.md  Makefile  OAUTH_SETUP.md  POOL_DO_GET_FIX.md  POOL_ERROR_FIX.md  PORT_CONSISTENCY_REPORT.md  PRICING_REMOVED.md  (+48 more)
alembic/: env.py
backups/: .gitkeep  README.md
docs/: BILLING-INVOICING-GAPS-ANALYSIS.md  CI-CD-COMPLETE.md  COMPLETE-BILLING-SYSTEM-SUMMARY.md  CONTENT_CREATOR_PORTFOLIO_PRODUCT_DESCRIPTION.md  CONTENT_GENERATION_DEBUG.md  DUNNING-REFUND-IMPLEMENTATION.md  EMAIL_VERIFICATION_FIX.md  FACEBOOK_INSTAGRAM_IMPLEMENTATION.md  FINAL-SECURITY-AUDIT-COMPLETE.md  GDPR-IMPLEMENTATION-COMPLETE.md  GDPR-S1-S2-IMPLEMENTATION-SUMMARY.md  GPT4O_MINI_IMPLEMENTATION_SUMMARY.md  GPT4O_MINI_MIGRATION.md  HTTP_ATTRIBUTES_LOGGING.md  INVOICING-QUICKSTART.md  INVOICING-TAX-IMPLEMENTATION.md  (+67 more)
(+216 files in other folders)
